# openai-rs

./: Cargo.toml  README.md
src/: client.rs  lib.rs  openai.rs
src/endpoints/: answer.rs  classification.rs  completion.rs  edits.rs  mod.rs  search.rs
